<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_assessment"
        android:icon="@drawable/ic_assessment_white_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_assessment"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="101"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/menu_settings"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_info_black_24dp"
        android:orderInCategory="102"
        android:title="@string/menu_about"
        app:showAsAction="collapseActionView" />
</menu>
